# Analiqo

./: .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.prod.yml  docker-compose.yml  env.example  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
accounts/: __init__.py  adapters.py  admin.py  api_urls.py  context_processors.py  forms.py  middleware.py  models.py  signals.py  urls.py  views.py
accounts/management/commands/: create_default_roles.py
accounts/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_auto_20250821_2146.py  0004_add_timestamp_fields.py
adminpanel/: __init__.py  admin.py  models.py  urls.py
analytics/: __init__.py  admin.py  apps.py  models.py  tasks.py  urls.py  views.py
audit/: __init__.py  admin.py  apps.py  gdpr_compliance.py  middleware.py  models.py  security.py
billing/: __init__.py  admin.py  apps.py  models.py  services.py  signals.py  stripe_client.py  tasks.py  urls.py  views.py
catalog/: __init__.py  admin.py  models.py  urls.py
core/: __init__.py  context_processors.py  health_urls.py  health_views.py  menus.py  middleware.py  models.py
credentials/: __init__.py  admin.py  apps.py  models.py  urls.py
fixtures/: demo_data.json
integrations/: __init__.py  admin.py  amazon_client.py  apps.py  flipkart_client.py  models.py  services.py  tasks.py
k8s/: deployment.yaml  namespace.yaml  service.yaml
notifications/: __init__.py  admin.py  models.py  urls.py
pricing_ml/: __init__.py  admin.py  apps.py  engine.py  models.py  urls.py
pricing_rules/: __init__.py  admin.py  apps.py  engine.py  models.py  urls.py
repricer/: __init__.py  admin.py  apps.py  models.py  urls.py
repricing_platform/: api_urls.py  asgi.py  celery.py  urls.py  wsgi.py
repricing_platform/settings/: base.py  dev.py  prod.py  test.py
scripts/: setup.sh
static/css/: dashboard.css  main.css
static/js/: dashboard.js  main.js
templates/: base.html  home.html  landing.html  login.html  signup.html
templates/account/: base.html  login.html  signup.html
templates/accounts/: onboarding.html  organization_create.html
templates/analytics/: dashboard.html  market_overview.html
templates/catalog/: product_create.html  product_detail.html  product_list.html
templates/components/: footer.html  navbar.html
templates/errors/: error.html
templates/pricing_ml/: model_create.html  model_detail.html  model_list.html
templates/pricing_rules/: rule_create.html  rule_detail.html  rule_list.html
templates/registration/: login.html
templates/repricer/: run_create.html  run_detail.html  run_list.html
templates/users/: profile.html  profile_edit.html
templates/web/: dashboard.html  home.html  landing.html
templates/web/partials/: dashboard_alerts.html  recent_activity.html
tests/: conftest.py
tests/integration/: test_marketplace_integrations.py
tests/unit/: test_pricing_engine.py
user/: adapters.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
user/migrations/: 0001_initial.py
web/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
web/views/: errors.py
