[tool.poetry]
name = "repricing-platform"
version = "1.0.0"
description = "AI-Powered SaaS Repricing Platform for Amazon and Flipkart"
authors = ["Repricing Platform Team"]
readme = "README.md"
packages = [{include = "repricing_platform"}]

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.0"
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"
celery = {extras = ["redis"], version = "^5.3.4"}
django-celery-beat = "^2.5.0"
django-celery-results = "^2.5.1"
django-allauth = "^0.57.0"
django-filter = "^23.5"
django-tables2 = "^2.7.0"
django-braces = "^1.15.0"
django-flags = "^5.0.12"
django-extensions = "^3.2.3"
django-environ = "^0.11.2"
django-cors-headers = "^4.3.1"
django-csp = "^3.7"
django-guardian = "^2.4.0"
djangorestframework = "^3.14.0"
drf-spectacular = "^0.27.0"
stripe = "^7.8.0"
cryptography = "^41.0.7"
pydantic = "^2.5.2"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
whitenoise = "^6.6.0"
gunicorn = "^21.2.0"
sentry-sdk = {extras = ["django"], version = "^1.39.1"}
prometheus-client = "^0.19.0"
django-prometheus = "^2.3.1"
boto3 = "^1.34.0"
scikit-learn = "^1.3.2"
xgboost = "^2.0.2"
lightgbm = "^4.1.0"
prophet = "^1.1.5"
matplotlib = "^3.8.2"
plotly = "^5.17.0"
kaleido = "^0.2.1"
pandas = "^2.1.4"
numpy = "^1.26.2"
scipy = "^1.11.4"
dj-database-url = "^2.1.0"
django-storages = "^1.14.2"
pillow = "^10.1.0"
python-dateutil = "^2.8.2"
pytz = "^2023.3"
babel = "^2.14.0"
django-timezone-field = "^6.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-django = "^4.7.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-xdist = "^3.5.0"
vcrpy = "^5.1.0"
hypothesis = "^6.92.1"
factory-boy = "^3.3.0"
black = "^23.11.0"
ruff = "^0.1.8"
isort = "^5.13.2"
mypy = "^1.7.1"
django-stubs = "^4.2.7"
types-requests = "^2.31.0"
types-redis = "^4.6.0"
locust = "^2.17.0"
playwright = "^1.40.0"
pre-commit = "^3.6.0"
bandit = "^1.7.5"
safety = "^2.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip_glob = ["*/migrations/*"]

[tool.ruff]
line-length = 88
target-version = "py312"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "repricing_platform.settings.dev"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "repricing_platform.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--reuse-db --nomigrations --cov=repricing_platform --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
source = "."
omit = [
    "*/migrations/*",
    "*/venv/*",
    "*/env/*",
    "manage.py",
    "*/settings/*",
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.bandit]
exclude_dirs = ["tests", "migrations"]
skips = ["B101", "B601"]
